java: deleted old promise tests, wrote up some notes

--- a/corejava/.project
+++ b/corejava/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WebGME Core Java</name>
+	<name>WebGme java</name>
 	<comment></comment>
 	<projects>
 	</projects>
