--- a/corejava/.classpath
+++ b/corejava/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/mongo-2.9.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
