--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webgme",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "Web based graphical domain specific modeling environments",
   "engines": {
     "node": ">=0.5.0"
@@ -28,8 +28,5 @@
     "socket.io": ">=0.9.14",
     "requirejs": ">=2.0.0"
   },
-  "devDependencies": {},
-  "bin": {
-    "webgme": "./server/cserver"
-  }
+  "devDependencies": {}
 }
