--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webgme",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Web based graphical domain specific modeling environments",
   "engines": {
     "node": ">=0.5.0"
@@ -27,5 +27,6 @@
     "socket.io": ">=0.9.14",
     "requirejs": ">=2.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "main": "core/index"
 }
