--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webgme",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Web based graphical domain specific modeling environments",
   "engines": {
     "node": ">=0.5.0"
@@ -28,5 +28,5 @@
     "requirejs": ">=2.0.0"
   },
   "devDependencies": {},
-  "main": "core/index"
+  "main": "core/webgme"
 }
