--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "mongodb": ">=1.2.0",
     "socket.io": ">=0.9.14",
     "requirejs": ">=2.0.0",
-    "express": "~3.4.4",
-    "passport": "~0.1.17",
-    "passport-google": "~0.3.0"
+    "express": ">=3.4.0",
+    "passport": ">=0.1.10",
+    "passport-google": ">=0.3.0",
+    "socket.io-client": ">=0.9.10"
   },
   "devDependencies": {},
   "main": "webgme"
