--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webgme",
-  "version": "0.4.4",
+  "version": "0.5.0",
   "description": "Web based graphical domain specific modeling environments",
   "engines": {
     "node": ">=0.5.0"
@@ -30,7 +30,8 @@
     "connect": ">=2.10.0",
     "passport": ">=0.1.10",
     "passport-google": ">=0.3.0",
-    "socket.io-client": ">=0.9.10"
+    "socket.io-client": ">=0.9.10",
+    "jszip": ">=2.2.0"
   },
   "devDependencies": {},
   "main": "webgme"
