--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "passport": ">=0.1.10",
     "passport-google": ">=0.3.0",
     "socket.io-client": ">=0.9.10",
-    "jszip": ">=2.2.0"
+    "jszip": ">=2.2.0",
+    "commander": ">=2.1.0"
   },
   "devDependencies": {},
   "main": "webgme"
