--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "socket.io-client": "=0.9.10",
     "jszip": "=2.2.0",
     "commander": "=2.1.0",
-    "aws-sdk": "=1.18.0"
+    "aws-sdk": "=1.18.0",
+    "superagent": "=0.18.2"
   },
   "devDependencies": {},
   "main": "webgme"
