--- a/client/js/Layouts/DefaultLayoutConfig.json
+++ b/client/js/Layouts/DefaultLayoutConfig.json
@@ -27,11 +27,11 @@
         {"id": "PropertyEditorPanel",
             "panel": "PropertyEditor/PropertyEditorPanel",
             "container": "east",
-            "DEBUG_ONLY": false},
+            "DEBUG_ONLY": false}
 
-        {"id": "TestPanel",
+        /*{"id": "TestPanel",
             "panel": "DebugTest/DebugTestPanel",
             "container": "east",
-            "DEBUG_ONLY": true}
+            "DEBUG_ONLY": true}*/
     ]
 }
