Run JSHint on client/js dirs

--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "aws-sdk": "=1.18.0",
     "superagent": "=0.18.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+      "gulp": "=3.8.6",
+      "gulp-jshint": "=1.8.0",
+      "jshint-stylish": "=0.4.0"
+  },
   "main": "webgme"
 }
