--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "connect": "=2.10.0",
     "passport": "=0.1.10",
     "passport-google": "=0.3.0",
+    "process": "^0.10.0",
     "socket.io-client": "=0.9.10",
     "jszip": "=2.2.0",
     "commander": "=2.1.0",
