--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "gulp": "=3.8.6",
     "gulp-jshint": "=1.8.0",
     "jshint-stylish": "=0.4.0",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "jscoverage":"^0.5.9"
   },
   "main": "webgme",
   "scripts": {
