--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "license": "MIT",
   "dependencies": {
     "mongodb": "~1.4.0",
-    "socket.io": "=0.9.14",
     "requirejs": "=2.1.15",
+    "socket.io": "~1.3.2",
     "express": "=3.4.0",
     "heap": "^0.2.5",
     "mime": "=1.2.11",
@@ -34,7 +34,7 @@
     "passport": "=0.1.10",
     "passport-google": "=0.3.0",
     "process": "^0.10.0",
-    "socket.io-client": "=0.9.10",
+    "socket.io-client": "~1.3.2",
     "jszip": "=2.2.0",
     "commander": "=2.1.0",
     "aws-sdk": "=1.18.0",
