--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "gulp-jshint": "=1.8.0",
     "jshint-stylish": "=0.4.0",
     "mocha": "^2.1.0",
-    "jscoverage":"^0.5.9"
+    "jscoverage": "^0.5.9",
+    "gulp-shell": "^0.2.11",
+    "run-sequence": "^1.0.2"
   },
   "main": "webgme",
   "scripts": {
