--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-jshint": "=1.8.0",
     "jshint-stylish": "=0.4.0",
     "mocha": "^2.1.0",
+    "chai": "^1.9.0",
     "jscoverage": "^0.5.9",
     "gulp-shell": "^0.2.11",
     "run-sequence": "^1.0.2"
