--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "jszip": "=2.2.0",
     "commander": "=2.1.0",
     "aws-sdk": "=1.18.0",
-    "superagent": "=0.18.2"
+    "superagent": "=0.18.2",
+    "buffer-equal-constant-time": "^1.0.1"
   },
   "devDependencies": {
     "gulp": "=3.8.6",
