--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "commander": "=2.1.0",
     "aws-sdk": "=1.18.0",
     "superagent": "=0.18.2",
-    "buffer-equal-constant-time": "^1.0.1"
+    "buffer-equal-constant-time": "^1.0.1",
+    "nedb": "=0.10.5",
+    "unzip": "=0.1.8",
+    "minimatch": "=0.3.0"
   },
   "devDependencies": {
     "gulp": "=3.8.6",
