npm prepublish: gulp compile-all

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "main": "webgme",
   "scripts": {
     "start": "node src/bin/start_server.js",
-    "test": "node node_modules/mocha/bin/mocha --recursive test"
+    "test": "node node_modules/mocha/bin/mocha --recursive test",
+    "prepublish": "gulp compile-all"
   }
 }
