--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "heap": "^0.2.5",
     "mime": "=1.2.11",
     "multiparty": "=3.2.4",
-    "connect": "=2.10.0",
+    "cookie-parser": "~1.3.3",
     "passport": "=0.1.10",
     "passport-google": "=0.3.0",
     "process": "^0.10.0",
