--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "buffer-equal-constant-time": "=1.0.1",
     "nedb": "=0.10.5",
     "unzip": "=0.1.8",
-    "minimatch": "=0.3.0"
+    "minimatch": "=0.3.0",
+    "q": "=1.1.2"
   },
   "devDependencies": {
     "gulp": "=3.8.6",
