--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "mongodb": "=1.4.30",
+    "bcrypt": "=0.8.1",
     "requirejs": "=2.1.15",
     "socket.io": "=1.3.2",
     "socket.io-client": "=1.3.2",
